
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int s_addr; } ;
struct sockaddr_in {int sin_port; struct in_addr sin_addr; int sin_family; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int inet_aton (char*,struct in_addr*) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int step (char*,int) ;

void setaddr(char *hname, struct sockaddr_in *sap, int port)
{
 struct hostent *hp;

 memset(sap,0,sizeof(*sap));
 sap->sin_family = AF_INET;

 if(!inet_aton(hname,&sap->sin_addr)){
  hp = gethostbyname(hname);
  if(hp == ((void*)0)){
   step("unkown host",-1);
   return;
  }
  sap->sin_addr = *(struct in_addr *)hp->h_addr;
 }else
  sap->sin_addr.s_addr = inet_addr(hname);

 sap->sin_port = htons(port);
}
